--- a/CV19/Views/Windows/MainWindow.xaml
+++ b/CV19/Views/Windows/MainWindow.xaml
@@ -29,8 +29,8 @@
             </MenuItem>
         </Menu>
         <StatusBar DockPanel.Dock="Bottom">
-            <StatusBarItem>
-                <TextBlock Text="1234"/>
+            <StatusBarItem MinWidth="70" MaxWidth="150">
+                <TextBlock Text="{Binding Status}"/>
             </StatusBarItem>
             <StatusBarItem>
                 <ProgressBar Width="120" Height="14" Value="30"/>
@@ -44,22 +44,21 @@
                         <RowDefinition Height="165*"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="150*"/>
-                        <ColumnDefinition Width="630* "/>
+                        <ColumnDefinition Width="165*"/>
+                        <ColumnDefinition Width="629*"/>
                     </Grid.ColumnDefinitions>
-                    
+
                     <Rectangle Grid.Column="0" Grid.Row="0"
-                               Margin="5, 7"
+                               Margin="10, 5"
                                Fill="Blue" Stroke="Red"
                                StrokeThickness="3"
                                RadiusX="5" RadiusY="7"/>
-                    
+
                     <Ellipse Grid.Column="1" Grid.Row="0"
                              Fill="Red" Stroke="Black" StrokeThickness="3"/>
 
                     <GridSplitter Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
-                                  HorizontalAlignment="Right"
-                                  Width="4"/>
+                                  Width="4" HorizontalAlignment="Right"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Вкладка 2"></TabItem>
