Некорректная обработка тестовых данных для графиков

--- a/CV19/Views/Windows/MainWindow.xaml
+++ b/CV19/Views/Windows/MainWindow.xaml
@@ -78,7 +78,7 @@
                                   Width="4" HorizontalAlignment="Right"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="Вкладка 2"></TabItem>
+            <TabItem Header="Вкладка"></TabItem>
         </TabControl>
     </DockPanel>
 </Window>
